PullRequest: apply ui.Select2 on contributorId select

--- a/app/views/git/list.scala.html
+++ b/app/views/git/list.scala.html
@@ -28,6 +28,9 @@
     @views.html.git.partial_search(project, page, condition, requestType)
     </div>
 </div>
+
+@common.select2()
+
 <script type="text/javascript">
     $(document).ready(function(){
         var htPjaxOptions = {
