ui.Calendar: apply new coding convention

--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -152,7 +152,7 @@
                         <dd>
                             <div class="search search-bar">
                                 <input type="text" id="issueDueDate" data-toggle="calendar" name="dueDate" class="textbox full" value="@issue.getDueDateString">
-                                <button type="button" class="search-btn"><i class="yobicon-calendar2"></i></button>
+                                <button type="button" class="search-btn btn-calendar"><i class="yobicon-calendar2"></i></button>
                             </div>
                         </dd>
                     </dl>
