--- a/app/views/issue/create.scala.html
+++ b/app/views/issue/create.scala.html
@@ -114,7 +114,7 @@
                         <dd>
                             <div class="search search-bar">
                                 <input type="text" id="issueDueDate" data-toggle="calendar" name="dueDate" class="textbox full">
-                                <button type="button" class="search-btn"><i class="yobicon-calendar2"></i></button>
+                                <button type="button" class="search-btn btn-calendar"><i class="yobicon-calendar2"></i></button>
                             </div>
                         </dd>
                     </dl>
