--- a/app/views/issue/partial_searchform.scala.html
+++ b/app/views/issue/partial_searchform.scala.html
@@ -131,7 +131,7 @@
             <dt>@Messages("issue.dueDate")</dt>
             <dd class="search search-bar">
                 <input id="issueDueDate" type="text" name="dueDate" class="textbox full" value="@param.getDueDateString" data-toggle="calendar">
-                <button type="button" class="search-btn"><i class="yobicon-calendar2"></i></button>
+                <button type="button" class="search-btn btn-calendar"><i class="yobicon-calendar2"></i></button>
             </dd>
         </dl>
 
