Milestone: add missing param `state` to order link

--- a/app/views/milestone/list.scala.html
+++ b/app/views/milestone/list.scala.html
@@ -29,9 +29,9 @@
 
 @makeFilterLink(fieldName:String, orderBy:String, orderDir:String, fieldText:String) = {
 	@if(orderBy.equals(fieldName)) {
-		<a href="@urlToList?orderBy=@fieldName&orderDir=@if(orderDir.equals("desc")){asc}else{desc}" class="filter active"><i class="ico btn-gray-arrow @if(orderDir.equals("desc")){ down }"></i>@fieldText</a>
+		<a href="@urlToList?orderBy=@fieldName&orderDir=@if(orderDir.equals("desc")){asc}else{desc}&state=@param.state" class="filter active"><i class="ico btn-gray-arrow @if(orderDir.equals("desc")){ down }"></i>@fieldText</a>
 	} else {
-	    <a href="@urlToList?orderBy=@fieldName&orderDir=asc" class="filter"><i class="ico btn-gray-arrow"></i>@fieldText</a>
+	    <a href="@urlToList?orderBy=@fieldName&orderDir=asc&state=@param.state" class="filter"><i class="ico btn-gray-arrow"></i>@fieldText</a>
 	}
 }
 
