--- a/app/views/code/partial_nonrange_codecomment_thread.scala.html
+++ b/app/views/code/partial_nonrange_codecomment_thread.scala.html
@@ -58,19 +58,6 @@
         </li>
         }
     </ul>
-    <p class="thread-actrow">
-        <button type="button" class="ybtn ybtn-default ybtn-small btn-thread-minimize"><i class="yobicon-maximize"></i></button>
 
-        @if(utils.AccessControl.isAllowed(UserApp.currentUser(), thread.asResource(), Operation.UPDATE)){
-            @if(thread.state == CommentThread.ThreadState.OPEN) {
-            <button type="button" data-request-method="post" data-request-uri="@routes.CommentThreadApp.close(thread.id)" class="ybtn ybtn-default ybtn-small">@Messages("commentThread.close")</button>
-            } else {
-            <button type="button" data-request-method="post" data-request-uri="@routes.CommentThreadApp.open(thread.id)" class="ybtn ybtn-default ybtn-small">@Messages("commentThread.open")</button>
-            }
-        }
-
-        @if(utils.AccessControl.isProjectResourceCreatable(UserApp.currentUser(), thread.project, ResourceType.REVIEW_COMMENT)){
-        <button type="button" class="ybtn ybtn-info ybtn-small btn-thread" data-thread-id="@thread.id">@Messages("button.comment.open")</button>
-        }
-    </p>
+    @partial_comment_form_on_thread(thread)
 </div>
