--- a/app/views/index/index.scala.html
+++ b/app/views/index/index.scala.html
@@ -34,26 +34,27 @@
                     <span>@Messages("app.description")</span>
                 </h3>
                 <div class="site-guide-inner">
-                    <ul class="guide-wrap">
-                        <li>
-                            <div class="guide-icons"><i class="yobicon-database-add"></i></div>
-                            <div class="guide-title">프로젝트 생성</div>
-                            <div class="guide-desc">상단의 프로젝트 생성 버튼을 통하여 자신만의 프로젝트를 만들 수 있습니다.</div>
+                    <ul class="guide-wrap row-fluid">
+                        <li class="span4">
+                            <h4>@Messages("app.welcome.project")</h4>
+                            <p>@Messages("app.welcome.project.desc")</p>
+                            <a href="@routes.ProjectApp.newProjectForm()" class="ybtn ybtn-success">
+                                @Messages("button.newProject")
+                            </a>
                         </li>
-                        <li>
-                            <div class="guide-icons"><i class="yobicon-eye"></i></div>
-                            <div class="guide-title">프로젝트 지켜보기</div>
-                            <div class="guide-desc">이슈트레커, 게시판등에서 발생한 새로운 이벤트들에 대한 알림을 받을 수 있습니다.</div>
+                        <li class="span4">
+                            <h4>@Messages("app.welcome.group")</h4>
+                            <p>@Messages("app.welcome.group.desc")</p>
+                            <a href="@routes.OrganizationApp.newForm()" class="ybtn ybtn-success">
+                                @Messages("title.newOrganization")
+                            </a>
                         </li>
-                        <li>
-                            <div class="guide-icons"><i class="yobicon-friends"></i></div>
-                            <div class="guide-title">팀 관리</div>
-                            <div class="guide-desc">프로젝트 설정메뉴에서 프로젝트 맴버에 대한 추가, 삭제등의 관리를 하실 수 있습니다.</div>
-                        </li>
-                        <li>
-                            <div class="guide-icons"><i class="yobicon-split"></i></div>
-                            <div class="guide-title">프로젝트 복사</div>
-                            <div class="guide-desc">원본 프로젝트를 복사하여 본인만의 고유한 프로젝트를 생성할수 있습니다.</div>
+                        <li class="span4">
+                            <h4>@Messages("app.welcome.searchProject")</h4>
+                            <p>@Messages("app.welcome.searchProject.desc")</p>
+                            <a href="@routes.ProjectApp.projects()" class="ybtn ybtn-success">
+                                @Messages("title.projectList")
+                            </a>
                         </li>
                     </ul>
                 </div>
