PullRequest: improve list
- Move review thread icon to before progres bar and number
- Show number of reviewers on list
- Show names of reviewers as tooltip
- Highlight reviewers number if current user included in it

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3529,7 +3529,12 @@ label.issue-item-row {
                 .bar { height:100%; }
             }
 
-            &.over { color:#f36c22; }
+            .infos-icon { color:#777; margin-right:2px; }
+
+            &.over {
+                color:@yobi-primary !important;
+                .infos-icon { color:@yobi-primary; }
+            }
         }
     }
 }
