--- a/app/assets/stylesheets/less/_common.less
+++ b/app/assets/stylesheets/less/_common.less
@@ -109,11 +109,18 @@ input[type=number]::-webkit-outer-spin-button {
 
     .box-shadow(inset 0px 1px 1px rgba(0,0,0,0.25));
     .bar {
+        height:100%;
         filter:none;
         &.orange { background:@orange; .box-shadow(none); } // #f28149
         &.blue   { background:@blue;   .box-shadow(none); }
         &.open   { background:@state-open; .box-shadow(none); }
         &.closed { background:@state-closed; .box-shadow(none); }
+    }
+
+    &.avatar {
+        height:5px;
+        overflow: hidden;
+        .border-radius(5px);
     }
 }
 
