Autolink: Fix support application.context string for autolink

--- a/app/views/common/markdown.scala.html
+++ b/app/views/common/markdown.scala.html
@@ -31,8 +31,9 @@ $(document).ready(function(){
     };
 
     @if(project != null){
-    htOptions.sIssuesUrl = "@routes.IssueApp.issues(project.owner, project.name)";
-    htOptions.sProjectUrl = "@routes.ProjectApp.project(project.owner, project.name)";
+        htOptions.sIssuesUrl = "@routes.IssueApp.issues(project.owner, project.name)";
+        htOptions.sProjectUrl = "@routes.ProjectApp.project(project.owner, project.name)";
+        htOptions.sApplicationContext = "@play.Configuration.root().getString("application.context")";
     }
 
     // Reusable markdown renderer
