Issue: set width of ui.Select2 field relative to search form

--- a/app/assets/stylesheets/less/_override.less
+++ b/app/assets/stylesheets/less/_override.less
@@ -97,6 +97,10 @@
             .border-radius(@select2-border-radius @select2-border-radius 0 0);
         }
     }
+
+    &.fullsize {
+        width:100% !important;
+    }
 }
 
 .select2-results {
