--- a/app/views/issue/create.scala.html
+++ b/app/views/issue/create.scala.html
@@ -95,7 +95,7 @@
                                     </a>
                                 } else {
                                     <select id="milestoneId" name="milestoneId"
-                                            data-toggle="select2" data-format="milestone">
+                                            data-toggle="select2" data-format="milestone" data-container-css-class="fullsize">
                                         <option value="@Milestone.NULL_MILESTONE_ID" selected="selected">@Messages("issue.noMilestone")</option>
                                         @for(milestone <- milestones){
                                         <option value="@milestone.id" data-state="@milestone.state">
