--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -116,7 +116,7 @@
                                 </a>
                             } else {
                                 <select id="milestoneId" name="milestoneId"
-                                            data-toggle="select2" data-format="milestone">
+                                            data-toggle="select2" data-format="milestone" data-container-css-class="fullsize">
                                         <option value="@Milestone.NULL_MILESTONE_ID" @if(!hasMilestone){ selected }>
                                             @Messages("issue.noMilestone")
                                         </option>
