Fix shortcut keymap style

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -4950,6 +4950,8 @@ label.issue-item-row {
     padding:20px;
     line-height:30px;
     white-space:nowrap;
+    text-align:left;
+    font-size:12px;
 
     .ybtn {
         min-width:20px;
