--- a/app/views/help/keymap.scala.html
+++ b/app/views/help/keymap.scala.html
@@ -24,88 +24,105 @@
 
 <div class="pull-right" style="padding:10px 0;">
     <a href="#helpKeys" data-toggle="modal" class="ybtn ybtn-inverse ybtn-mini">
-        <i class="yobicon-info-sign"></i> @Messages("title.keymap")
+        @Messages("title.keymap")
     </a>
 
     <div id="helpKeys" class="modal hide fade keymap-help" tabindex="-1" role="dialog">
         <div class="row-fluid">
             <div class="span3">
                 <h5>@Messages("project.projects")</h5>
-	            <span class="ybtn ybtn-small">H</span>
-	            <span class="help-inline">@Messages("menu.home")</span><br>
+
+                <span class="ybtn ybtn-small">H</span>
+                <span class="help-inline">@Messages("menu.home")</span><br>
 
                 <span class="ybtn ybtn-small">B</span>
                 <span class="help-inline">@Messages("menu.board")</span><br>
 
-	            <span class="ybtn ybtn-small">I</span>
-	            <span class="help-inline">@Messages("menu.issue")</span><br>
+                <span class="ybtn ybtn-small">I</span>
+                <span class="help-inline">@Messages("menu.issue")</span><br>
 
-	            <span class="ybtn ybtn-small">C</span>
-	            <span class="help-inline">@Messages("menu.code")</span><br>
+                <span class="ybtn ybtn-small">C</span>
+                <span class="help-inline">@Messages("menu.code")</span><br>
 
-	            <span class="ybtn ybtn-small">M</span>
-	            <span class="help-inline">@Messages("milestone")</span><br>
+                <span class="ybtn ybtn-small">M</span>
+                <span class="help-inline">@Messages("milestone")</span><br>
 
                 @if(project != null ) {
                     @if(project.vcs.equals("GIT")){
-                <span class="ybtn ybtn-small">F</span>
-                <span class="help-inline">@Messages("menu.pullRequest")</span><br>
+                        <span class="ybtn ybtn-small">F</span>
+                        <span class="help-inline">@Messages("menu.pullRequest")</span><br>
                     }
                 }
 
                 @if(project != null ) {
                     @if(ProjectUser.roleOf(session.get("loginId"), project).equals("manager")){
-	            <span class="ybtn ybtn-small">Q</span>
-                <span class="help-inline">@Messages("project.setting")</span><br>
+                        <span class="ybtn ybtn-small">Q</span>
+                        <span class="help-inline">@Messages("project.setting")</span><br>
                     }
                 }
             </div>
 
-            <div class="span4">
-	            <h5>@Messages("title." + section)</h5>
+            <div class="span9">
+                <div class="row-fluid">
+                    <div class="span5">
+                        <h5>@Messages("title." + section)</h5>
 
-	            @if(section.indexOf("board") > -1){
-                <span class="ybtn ybtn-small">N</span>
-                <span class="help-inline">@Messages("post.write")</span><br>
-                }
+                        @if(section.indexOf("board") > -1){
+                            <span class="ybtn ybtn-small">N</span>
+                            <span class="help-inline">@Messages("post.write")</span><br>
+                        }
 
-                @if(section.indexOf("issue") > -1){
-                <span class="ybtn ybtn-small">N</span>
-                <span class="help-inline">@Messages("issue.menu.new")</span><br>
-                }
+                        @if(section.indexOf("issue") > -1){
+                            <span class="ybtn ybtn-small">N</span>
+                            <span class="help-inline">@Messages("issue.menu.new")</span><br>
+                        }
 
-                @if(section.indexOf("Detail") > - 1){
-                <span class="ybtn ybtn-small">L</span>
-                <span class="help-inline">@Messages("button.list")</span><br>
+                        @if(section.indexOf("Detail") > - 1){
+                            <span class="ybtn ybtn-small">L</span>
+                            <span class="help-inline">@Messages("button.list")</span><br>
 
-	            <span class="ybtn ybtn-small">E</span>
-	            <span class="help-inline">@Messages("button.edit")</span><br>
-	            }
+                            <span class="ybtn ybtn-small">E</span>
+                            <span class="help-inline">@Messages("button.edit")</span><br>
+                        }
 
-	            @if(section.indexOf("List") > -1){
-	            <span class="ybtn ybtn-small">A</span>
-	            <span class="help-inline">@Messages("button.prevPage")</span><br>
+                        @if(section.indexOf("List") > -1){
+                            <span class="ybtn ybtn-small">A</span>
+                            <span class="help-inline">@Messages("button.prevPage")</span><br>
 
-	            <span class="ybtn ybtn-small">S</span>
-	            <span class="help-inline">@Messages("button.nextPage")</span><br>
-	            }
+                            <span class="ybtn ybtn-small">S</span>
+                            <span class="help-inline">@Messages("button.nextPage")</span><br>
+                        }
 
-                @if(section == "issueList"){
-                <span class="ybtn ybtn-small">@ctrl</span>+ <span class="ybtn ybtn-small">A</span>
-                <span class="help-inline">@Messages("button.selectAll")</span><br>
-                }
-            </div>
+                        @if(section == "issueList"){
+                            <span class="ybtn ybtn-small">@ctrl</span>+ <span class="ybtn ybtn-small">A</span>
+                            <span class="help-inline">@Messages("button.selectAll")</span><br>
+                        }
+                    </div>
 
-            <div class="span5">
-	            <h5>@Messages("site")</h5>
-	            <span class="ybtn ybtn-small">P</span>
-	            <span class="help-inline">@Messages("userinfo.profile")</span><br>
+                    <div class="span7">
+                        <h5>@Messages("site")</h5>
 
-                <span class="ybtn ybtn-small">ALT</span> + <span class="ybtn ybtn-small">S</span>
-                <span class="help-inline">@Messages("site.search")</span><br>
+                        <span class="ybtn ybtn-small">P</span>
+                        <span class="help-inline">@Messages("userinfo.profile")</span><br>
 
-	            <span class="ybtn ybtn-small">@ctrl</span> + <span class="ybtn ybtn-small">ENTER</span>
-	            <span class="help-inline">@Messages("button.submitForm")</span><br>
+                        <span class="ybtn ybtn-small">ALT</span> + <span class="ybtn ybtn-small">S</span>
+                        <span class="help-inline">@Messages("site.search")</span><br>
+
+                        <span class="ybtn ybtn-small">@ctrl</span> + <span class="ybtn ybtn-small">ENTER</span>
+                        <span class="help-inline">@Messages("button.submitForm")</span><br>
+                    </div>
+                </div>
+                <div class="row-fluid mt20">
+                    <div class="span12">
+                        @if((section.indexOf("issue") > -1) && (section.indexOf("Detail") > - 1)){
+                            <h5>@Messages("search.menu.issue.comments")</h5>
+                            <span class="ybtn ybtn-small">SHIFT</span> +
+                            <span class="ybtn ybtn-small">@ctrl</span> +
+                            <span class="ybtn ybtn-small">ENTER</span>
+                            <span class="help-inline">@Messages("button.commentAndNextState.closed")</span><br>
+                        }
+                    </div>
+                </div>
             </div>
         </div>
 
