Fix due date validation error  fix issue 1737, 1733, 1712  add due date validation

--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -183,7 +183,8 @@
             "sIssueFormURL"     : "@routes.IssueApp.newIssueForm(project.owner, project.name)",
             "sIssueListURL"     : "@routes.IssueApp.issues(project.owner, project.name)",
             "elTextarea"        : 'textarea[data-editor-mode="content-body"]',
-            "elMilestoneRefresh": $("#milestoneOption .yobicon-refresh")
+            "elMilestoneRefresh": $("#milestoneOption .yobicon-refresh"),
+            "elDueDate"         : $("#issueDueDate")
         });
 
         // yobi.Mention
