Search: Change color for keyword highlighting

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -5872,7 +5872,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     }
 
     strong.keyword {
-        background-color: #fffd38;
+        background-color: #6BC4E9;
         padding:2px;
     }
 
