Search:Change color for empty result category

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -5754,7 +5754,14 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         }
     }
 }
-
+.search-category-wrap {
+    li {
+        font-weight: bold;
+        &.empty {
+            a { color:#d3d2d3;}
+        }
+    }
+}
 .search-list-wrap {
     list-style: none;
     display: block;
