Fix cursor style for day of the week title in date picker

--- a/app/assets/stylesheets/less/_override.less
+++ b/app/assets/stylesheets/less/_override.less
@@ -335,3 +335,7 @@ li.select2-result-with-children:first-of-type {
     display: block;
     margin-right: 15px;
 }
+
+.pika-table abbr[title] {
+    cursor: default;
+}
