add due date validation check  - prevent duplicate request in issue view page  - prevent bad request without validation check

--- a/app/views/issue/partial_searchform.scala.html
+++ b/app/views/issue/partial_searchform.scala.html
@@ -30,7 +30,7 @@
     <div class="search">
         <div class="search-bar">
             <input name="filter" class="textbox full" type="text" value="@param.filter" data-search="filter">
-            <button type="submit" class="search-btn"><i class="yobicon-search"></i></button>
+            <button type="button" class="search-btn" data-submit="submit"><i class="yobicon-search"></i></button>
         </div>
     </div>
 
