Project: remove incorrect `pattern` attribute from create form

--- a/app/views/project/create.scala.html
+++ b/app/views/project/create.scala.html
@@ -78,7 +78,7 @@
             </label>
           </dt>
           <dd>
-            <input id="project-name" type="text" name="name" class="text" maxlength="250" pattern="[a-zA-Z0-9-]+"
+            <input id="project-name" type="text" name="name" class="text" maxlength="250"
                    value="@newProjectForm.field("name").value" placeholder="@Messages("project.name.placeholder")"  >
           </dd>
           <!-- // -->
