ShortcutKey: fix incorrect key description

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -4952,6 +4952,8 @@ label.issue-item-row {
     white-space:nowrap;
     text-align:left;
     font-size:12px;
+    width:640px;
+    margin-left:-320px;
 
     .ybtn {
         min-width:20px;
