Markdown: Fix padding of list style on markdown

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -80,7 +80,7 @@
   }
 
   ul {
-     margin:0px 15px;
+     padding:0px 20px;
      line-height:20px;
      list-style:disc;
   }
@@ -100,7 +100,7 @@
   
 
   ol{
-     margin:0px 15px;
+     padding:0px 20px;
      line-height:20px;
      list-style:decimal;
   }
