Milestone: remove stripe style for milestone progressbar

--- a/app/views/milestone/partial_status.scala.html
+++ b/app/views/milestone/partial_status.scala.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="progress-wrap">
-        <div class="progress progress-success progress-striped nm">
+        <div class="progress progress-success nm">
             <div class="bar" style="width: @milestone.getCompletionRate%;"></div>
         </div>
         <div class="progress-info">
