--- a/app/views/user/partial_milestones.scala.html
+++ b/app/views/user/partial_milestones.scala.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="progress-wrap">
-            <div class="progress progress-success progress-striped active">
+            <div class="progress progress-success">
                 <div class="bar" style="width: @milestone.getCompletionRate%;"></div>
             </div>
         </div>
