--- a/app/views/milestone/list.scala.html
+++ b/app/views/milestone/list.scala.html
@@ -124,7 +124,7 @@
                     </div>
 
                     <div class="progress-wrap">
-    					<div class="progress progress-success @if(milestone.state == State.OPEN) {progress-striped active}">
+    					<div class="progress progress-success">
     						<div class="bar" style="width: @milestone.getCompletionRate%;"></div>
     					</div>
                     </div>
