--- a/app/views/milestone/view.scala.html
+++ b/app/views/milestone/view.scala.html
@@ -54,7 +54,7 @@
                 </small>
             </h4>
 
-            <div class="progress progress-success @if(milestone.state == State.OPEN) {progress-striped active}">
+            <div class="progress progress-success">
                 <div class="bar" style="width: @milestone.getCompletionRate%;"></div>
             </div>
             <div class="milestone-desc">
