Apply i18n to markdown loading message

--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -94,7 +94,7 @@
                     <div class="content empty-content"></div>
                 } else {
                     <div class="markdown-loader">
-                        <i class="yobicon-loading2"></i> @Messages("site.massMail.loading")
+                        <i class="yobicon-loading2"></i> @Messages("common.loading")
                     </div>
                     <div class="content markdown-wrap markdown-before" markdown="true">@issue.body</div>
                 }
