--- a/app/views/git/view.scala.html
+++ b/app/views/git/view.scala.html
@@ -45,7 +45,7 @@
                 @partial_branch(pull)
             </div>
             <div class="markdown-loader">
-                <i class=" yobicon-loading2"></i> Loading....
+                <i class="yobicon-loading2"></i> @Messages("common.loading")
             </div>
             <div class="content markdown-wrap markdown-before" markdown="true">@pull.body</div>
             <div class="attachments" data-resource-type="@ResourceType.PULL_REQUEST" data-resource-id="@pull.id"></div>
