GNB: Fix width for search form when max width 1024px

--- a/app/assets/stylesheets/less/_reponsive.less
+++ b/app/assets/stylesheets/less/_reponsive.less
@@ -18,6 +18,12 @@
         }
     }
 
+    .search-box {
+        input:focus {
+            width:250px;
+        }
+    }
+
     .page-wrap-outer {
         min-width: 1000px;
         padding:0 10px;
