GNB: Change color for golbal menu

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -102,7 +102,7 @@
                 padding:10px;
                 float: none;
                 line-height: 40px;
-                color:#788ba7;
+                color:#a2a2a2;
                 text-decoration: none;
                 .transition(color 0.15s);
 
