--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -5472,7 +5472,10 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         border: none;
         .box-shadow(none);
 
-        .thread-header, .thread-actrow, .comments {
+        .thread-header,
+        .thread-actrow,
+        .comments,
+        .write-comment-form {
             display:none;
         }
         .btn-thread-here {
